# fastapi-micro-rabbitmq-services

./: README.MD  docker-compose.yaml
services/auth_service/: .gitignore  Dockerfile  auht_rabbit.py  auth_consumer.py  auth_publisher.py  create_fastapi_app.py  main.py  pyproject.toml  requirements.txt
services/auth_service/alembic/: env.py
services/auth_service/api/: __init__.py
services/auth_service/api/auth_v1/: __init__.py  auth_jwt_router.py  auth_token_helpers.py  auth_utils.py  token_crud.py  validation_auth.py  validation_auth_helper.py  validation_auth_helper_refresh.py  validation_jwt.py
services/auth_service/api/user_v1/: users_crud.py
services/auth_service/auth_utils/: __init__.py  refresh_token_check.py  utils_jwt.py
services/auth_service/core/: config.py
services/auth_service/core/models/: __init__.py  active_token_model.py  auth_user_model.py  base_model.py  db_helper.py  (+1 more)
services/auth_service/jinja2_api/: __init__.py  templates_jinja2.py
services/auth_service/utils/: __init__.py
services/user_service/: .gitignore  Dockerfile  README.md  create_fastapi_app.py  main.py  pyproject.toml  requirements.txt  user_consumer.py  user_publisher.py  user_rabbit.py
services/user_service/alembic/: env.py
services/user_service/api/: __init__.py
services/user_service/auth_utils/: README.md  __init__.py  utils_jwt.py
services/user_service/core/: __init__.py  config.py  redis.py  redis_utils.py
services/user_service/jinja2_main/: __init__.py  jinja2_templates.py
services/user_service/utils/: slug_generate.py  upload_image.py
(+44 files in other folders)
